--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,14 @@
     height: 100%;
     width: 100%;
 }
+.shadowText {
+	text-shadow: 1px 1px 1px black;
+}
+#ajaxLoader {
+	left: 50%;
+	position: absolute;
+	top: 50%;
+}
 .clear {
     clear: both;
 }
@@ -56,4 +64,34 @@ input[type="text"], input[type="password"] {
 }
 #loginPanel .inputLine p {
     margin: 0 0 10px;
+}
+
+#topMenu {
+	width: 100%; 
+	height: 20px;
+}
+#topMenu .menuItem {
+	background: none repeat scroll 0 0 #4682b4;
+    border: 1px solid;
+    float: left;
+    height: 20px;
+    width: 95px;
+	margin-left: 12px;
+	text-align: center;
+	cursor: pointer;
+}
+#topMenu .menuItem:hover{
+	background: none repeat scroll 0 0 #FFFFFF;
+    border: 1px solid;
+    float: left;
+    height: 20px;
+    width: 95px;
+	margin-left: 12px;
+	text-align: center;
+	cursor: pointer;
+}
+#body {
+	height: 100%;
+    margin-top: 10px;
+    width: 100%;
 }
