--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,21 @@
+
 #main {
     height: 100%;
     width: 100%;
 }
 .shadowText {
-	text-shadow: 1px 1px 1px black;
+    text-shadow: 1px 1px 1px black;
+}
+.gray {
+    background: none repeat scroll 0 0 #cccccc;
+}
+.hide {
+	display: none;
 }
 #ajaxLoader {
-	left: 50%;
-	position: absolute;
-	top: 50%;
+    left: 50%;
+    position: absolute;
+    top: 50%;
 }
 .clear {
     clear: both;
@@ -37,8 +44,8 @@ input[type="text"], input[type="password"] {
     width: 291px;
 }
 #loginPanel #submit {
-	left: 39%;
-	position: absolute;
+    left: 39%;
+    position: absolute;
 }
 #loginPanel .loginFormHead {
     background: none repeat scroll 0 0 #4682b4;
@@ -65,33 +72,50 @@ input[type="text"], input[type="password"] {
 #loginPanel .inputLine p {
     margin: 0 0 10px;
 }
-
 #topMenu {
-	width: 100%; 
-	height: 20px;
+    height: 20px;
+    width: 100%;
 }
 #topMenu .menuItem {
-	background: none repeat scroll 0 0 #4682b4;
+    background: none repeat scroll 0 0 #4682b4;
     border: 1px solid;
+    cursor: pointer;
     float: left;
     height: 20px;
-    width: 95px;
-	margin-left: 12px;
-	text-align: center;
-	cursor: pointer;
+    margin-left: 12px;
+    min-width: 95px;
+    text-align: center;
 }
-#topMenu .menuItem:hover{
-	background: none repeat scroll 0 0 #FFFFFF;
+#topMenu .menuItem:hover {
+    background: none repeat scroll 0 0 #ffffff;
     border: 1px solid;
+    cursor: pointer;
     float: left;
     height: 20px;
-    width: 95px;
-	margin-left: 12px;
-	text-align: center;
-	cursor: pointer;
+    margin-left: 12px;
+    min-width: 95px;
+    text-align: center;
 }
 #body {
-	height: 100%;
+    height: 100%;
     margin-top: 10px;
     width: 100%;
+}
+#categoriesTypesTable .contentLine {
+    height: 20px;
+    width: 230px;
+}
+#categoriesTypesTable .contentColumn {
+    float: left;
+    height: 20px;
+}
+#categoriesTypesTable .contentColumn.id {
+    width: 30px;
+}
+#categoriesTypesTable .contentColumn.name {
+    width: 200px;
+}
+.tableHead .contentColumn
+{
+	text-align: center;
 }
